Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Blog.GitHub</h1>
-      <h2 class="project-tagline">Moriya个人博客</h2>
+      <h2 class="project-tagline">Moriya个人博客1</h2>
       <a href="https://github.com/SteveMoriya/blog.github" class="btn">View on GitHub</a>
       <a href="https://github.com/SteveMoriya/blog.github/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/SteveMoriya/blog.github/tarball/master" class="btn">Download .tar.gz</a>
